--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rusheatery">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +14,8 @@
         <activity android:name=".SignUpActivity"></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDGDHb2Yiloycl_XX96MqMuoWRqDfl1ol4"/>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
